--- a/build.gradle
+++ b/build.gradle
@@ -19,23 +19,18 @@ group 'com.rua.test'
 version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
 
 repositories {
     mavenCentral()
     jcenter()
 }
 
-test {
-    systemProperty "file.encoding", "utf-8"
-}
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.projectlombok:lombok')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('com.h2database:h2')
+    compile('org.springframework.boot:spring-boot-starter-mustache')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
